Update index.html version beta-root1 for Codename Tulya.
Codename Tulya - Version: beta-root1

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TulyaCSS</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/img/logo.png">
 </head>
 <body>
     <div class="navbar">
         <div class="title">
             <a href="tulyacss.github.io">
-                <img src="assets/blacktext.png">
+                <img src="assets/img/blacktext.png">
             </a>
         </div>
         <div class="menu">
